POSSIBLE TODO send sha1hash of public key for better error reporting(?)
POSSIBLE TODO check own keypair for better error reporting
TODO vpn::tap_ev does not handle EOF well, or does it? (CHECK)
TODO vpn::tcpv4_ev does not handle EOF well, or does it? (CHECK)
TODO tcp_connection::tcpv4_ev does not handle EOF well, or does it? (CHECK)

1.5
   - protocol version 0.1, compatible with older releases.
   - fix a bug where queued vpn packets were cleared to zero. while
     this doesn't affect security, it did cause warning messages and
     unnecessary connectivity delays.

1.4 Sat Jan 17 15:49:21 CET 2004
   - protocol version 0.1, compatible with older releases.
   - better retry behaviour on key mismatch.
   - use select-based io_manager instead of poll-based one.
   - share io manager between rxvt-unicode and vpe.
   - sooo many *BSD workarounds because no BSD I could find is even
     remotely POSIX-compatible.

1.2 Fri Oct 17 03:44:44 CEST 2003
   - protocol version 0.1.
   - tincd kernel interface code imported, more supported platforms
     (native/linux (2.4), tincd/linux (2.2 and 2.4), tincd/freebsd,
     native/cygwin).
   - added primitive ethernet emulation (ipv4 only), which allows
     the following platforms that only have tun drivers to work:
     /* none yet tested */
   - portability workarounds, especially for unfriendly freebsd
   - very minor bugfixes
   - warnings when choosing insecure ciphers/hashes
   - reduced default hmac length to 8.
   - cvs now contains configure, Makefile.in and other generated files.
   - added doc/complex-example to the distribution.

1.0
   - protocol version 0.1.
   - tweaked various timeouts to help very slow (486) class
     machines or nets with many hosts.
   - tweaked rate-limiting to be more forgiving for hosts
     connecting through routers (not a fix).
