@@ -6,6 +6,11 @@ TODO tcp_connection::tcpv4_ev does not handle EOF well, or does it? (CHECK)
 
 1.5
    - protocol version 0.1, compatible with older releases.
+   - vped will refuse to start when hostkey and public key do not match.
+   - better error reporting for "unusual" conditions, like failing
+     to allocate memory, that should not normally happen and
+     will otherwise result in spurious other error messages. Also
+     adds paranoid checks in case openssl's API changes in a bad way.
    - fix a bug where queued vpn packets were cleared to zero. while
      this doesn't affect security, it did cause warning messages and
      unnecessary connectivity delays.
